@@ -21,7 +21,7 @@ if {[encoding system] != "utf-8"} {
 if {![info exists tk_version]} {package require Tk}
 wm withdraw .
 
-set version "2025-06-14"
+set version "2025-08-27"
 set script [file normalize [info script]]
 set title [file tail $script]
 set cwd [pwd]
@@ -386,6 +386,7 @@ set console 0;			# Valid values: 0=hide, 1=show
 
 set ctid [thread::create -joinable "
   package require Tk
+  package require tcl::chan::fifo2
   wm withdraw .
   wm title . \"$title - [mc l99]\"
   set font_size ${console.font.size}
@@ -440,22 +441,27 @@ ctsend {
     .txt yview moveto [lindex $py 0]
   }
 
-  set lines 0
   proc write {text} {
-    incr ::lines
     .txt configure -state normal
-    if {[string index $text 0] == "\r"} {
-      set text [string range $text 1 end]
-      .txt delete end-2l end-1l
+    foreach item [split $text \n] {
+      if {[string index $item 0] == "\r"} {
+	set item [string range $item 1 end]
+	.txt delete end-2l end-1l
+      }
+      if {[string index $item end] == "\b"} {
+	set item [string range $item 0 end-1]
+      } else {
+	append item \n
+      }
+      .txt insert end $item
     }
-    .txt insert end $text
     .txt configure -state disabled
-    .txt see end
-    if {$::lines == 256} {update; set ::lines 0}
+    if {[winfo ismapped .]} {.txt see end}
   }
 
   proc show_hide {show} {
     if {$show} {
+      .txt see end
       if {$::geometry == ""} {
 	wm deiconify .
       } else {
@@ -472,12 +478,14 @@ ctsend {
     }
   }
 
-  lassign [chan pipe] fdi fdo
+  lassign [::tcl::chan::fifo2] fdi fdo
   thread::detach $fdo
-  fconfigure $fdi -blocking 0 -buffering line -translation lf
+  fconfigure $fdi -blocking 0 -buffering full -buffersize 65536 -translation lf
   fileevent $fdi readable "
-    while {\[gets $fdi line\] >= 0} {write \"\$line\\n\"}
-  "
+    set text {}
+    while {\[gets $fdi line\] >= 0} {lappend text \$line}
+    write \[join \$text \\n\]
+    "
 }
 
 set fdo [ctsend "set fdo"]
@@ -490,11 +498,11 @@ if {$console == 1} {
   ctsend "show_hide 1"
 }
 
-# Mark output message
+# Write to console
 
 proc cputw {text} {cputs "\[+++\] $text"}
 proc cputi {text} {cputs "\[===\] $text"}
-proc cputx {text} {cputs "\[···\] $text"}
+proc cputx {text} {cputs "\[   \] $text"}
 
 cputw [mc m51 [pid] [file tail [info nameofexecutable]]]
 cputw "Tcl/Tk version $tcl_patchLevel"
@@ -636,7 +644,10 @@ checkbutton .output -text [mc c99] -width 32 \
 	-variable console.show -command show_hide_console
 pack .output -after .buttons -anchor n -expand 1 -fill x
 
-proc show_hide_console {} {ctsend "show_hide ${::console.show}";update}
+proc show_hide_console {} {
+  update idletasks
+  ctsend "show_hide ${::console.show}"
+}
 show_hide_console
 
 # Map/Unmap events are generated by Windows only!
@@ -935,7 +946,7 @@ save_script_settings
 
 if {[ctsend "winfo ismapped ."]} {
   ctsend "
-    write \"\n[mc m99]\"
+    write \"\n[mc m99]\b\"
     wm protocol . WM_DELETE_WINDOW {}
     bind . <ButtonRelease-3> {destroy .}
     tkwait window .
